Fix layout bug on the theme registry

--- a/assets/styles/profile.css
+++ b/assets/styles/profile.css
@@ -33,7 +33,7 @@
 
 @media (min-width: 768px) {
   .profile-card-wrapper .card {
-    height: 100%;
+    max-height: 100%;
     overflow-y: scroll;
   }
 
